# Raven-Language

./: .deepsource.toml  .gitignore  .gitmodules  Cargo.toml  README.md  codecov.yml  index.html  raven.profdata  rustfmt.toml  style.css  test.chalk  test.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-linux.yml  build-macos-arm.yml  build-macos-x86.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  build.yml
About/: README.md  about.html  index.html
About/js/: render.js
Documentation/: documentation.html  index.html  style.css
Documentation/MarkdownReaders/Doc1/: README.md
Documentation/MarkdownReaders/Doc11/: README.md
Documentation/MarkdownReaders/Doc2/: README.md
Documentation/MarkdownReaders/Doc3/: README.md
Documentation/MarkdownReaders/Doc4/: README.md
Documentation/MarkdownReaders/Doc5/: doc5.html
Install/: index.html  install.html  style.css
crates/async-recursion/src/: expand.rs
crates/async-recursion/tests/: generic_parameters.rs
crates/async-trait/src/: expand.rs  lib.rs
crates/async-trait/tests/: test.rs
docs/: building.md  contributing.md  index.md  memory-management-plan.md
docs/book/: 2-operators.md  3-memory-management.md
docs/raven/: 3_control_flow.md  4_functions.md  5_1_traits.md  5_structures.md  6_generics.md
language/: README.md
language/ast/: Cargo.toml
language/ast/src/: basic_types.rs  blocks.rs  class_type.rs  code.rs  compiler.rs  function.rs  function_type.rs  lib.rs  parsing_type.rs  program.rs  struct.rs  type_resolver.rs  types.rs
language/checker/: Cargo.toml  README.md
language/checker/src/: check_borrows.rs  check_code.rs  check_function.rs  check_high_level_code.rs  check_impl_call.rs  check_low_level_code.rs  check_method_call.rs  check_operator.rs  check_struct.rs  degeneric.rs  finalize_code.rs  imports.rs  lib.rs  output.rs  resolver.rs  solidifier.rs
language/cli/: Cargo.toml
language/cli/src/: arguments.rs  main.rs
language/compiler/: Cargo.toml
language/compiler/src/: compiler.rs  context.rs  file.rs  function_compiler.rs  lib.rs  main.rs  types.rs  util.rs
language/compilers/: README.md
language/compilers/compilers/: Cargo.toml
language/compilers/llvm/: Cargo.toml  README.md  build.rs
language/compilers/llvm/src/: compiler.rs  execution.rs  file.rs  function_compiler.rs  lib.rs  main_future.rs  type_getter.rs  type_waiter.rs  util.rs  vtable_manager.rs
language/compilers/llvm/src/internal/: instructions.rs  intrinsics.rs  math_internal.rs  mod.rs  string_internal.rs  structs.rs
language/compilers/llvm/src/lifetimes/: mod.rs
language/compilers/llvm/src/types/: resolved_type.rs  type_resolver.rs
language/compilers/llvm/wrappers/: target.c
language/data/: Cargo.toml  README.md  build.rs
language/data/src/: externs.rs  lib.rs  tokens.rs
language/parser/: Cargo.toml  README.md
language/parser/src/: async_code.rs  code.rs  conditional.rs  function.rs  imports.rs  language.pest  lib.rs  literal.rs  parser.rs  top_elements.rs  types.rs  util.rs
language/parser/src/parser/: code_parser.rs  control_parser.rs  function_parser.rs  mod.rs  operator_parser.rs  struct_parser.rs  top_parser.rs  util.rs
language/parser/src/tokens/: code_tokenizer.rs  mod.rs  tokenizer.rs  tokens.rs  top_tokenizer.rs  util.rs
language/runner/: Cargo.toml  README.md
language/runner/src/: lib.rs  runner.rs
language/syntax/: Cargo.toml  README.md
language/syntax/src/: async_getters.rs  async_util.rs  chalk_interner.rs  chalk_support.rs  code.rs  errors.rs  fields.rs  function.rs  lib.rs  operation_util.rs  struct.rs  structures.rs  syntax.rs  top_element_manager.rs  types.rs
language/syntax/src/program/: code.rs  function.rs  mod.rs  struct.rs  syntax.rs  types.rs
lib/core/: build.rv
lib/core/src/: array.rv  coroutine.rv  iter.rv  list.rv  main.rv  math.rv  mem.rv  numbers.rv  ptr.rv  stdio.rv  string.rv
lib/std/: Test.rv
lib/std/src/: main.rv  math.rv
lib/test/: .gitignore  build.rv
lib/test/src/: main.rv
lib/test/test/: arrays.rv  bitwise.rv  built-in-operators.rv  cast-number-string.rv  errors.rv  escape-characters.rv  escape_characters.rv  for-loops.rv  generic-types.rv  if-while-do.rv  logical-operators.rv  method-calls.rv  pointers.rv  relational-operators.rv  self-impls.rv  string-casting.rv  strings.rv  structures.rv  test.rv  trait-calls.rv  virtual-calls.rv
lib/test/tests/: variables.rv  vtables.rv
rewrite/compilers/compiler/: Cargo.toml
rewrite/format/: Cargo.toml
rewrite/format/src/: lib.rs
rewrite/functions/: Cargo.toml
rewrite/functions/src/: lib.rs  parsing.rs
rewrite/generics/: Cargo.toml
rewrite/generics/src/: lib.rs
rewrite/lexer/: Cargo.toml
rewrite/lexer/src/: lib.rs
rewrite/parser/: Cargo.toml
rewrite/parser/src/: lib.rs  steps.rs
rewrite/program/: Cargo.toml
rewrite/program/src/: lib.rs
rewrite/runner/: Cargo.toml
rewrite/runner/src/: lib.rs
rewrite/types/: Cargo.toml
rewrite/types/src/: lib.rs
rewrite/util/: Cargo.toml
rewrite/util/src/: lib.rs  source.rs  top_elements.rs
tools/ide-plugins/raven-intellij-natives/: Cargo.toml
tools/ide-plugins/raven-intellij-plugin/: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
tools/ide-plugins/raven-language-server/: Cargo.toml
tools/ide-plugins/raven-language-server/src/: main.rs  semantic_tokens.rs  stdio.rs  syntax_manager.rs
tools/ide-plugins/raven-language-server/src/lsp/: body.rs  error.rs  mod.rs  request.rs
tools/ide-plugins/raven-language-server/src/requests/: mod.rs
tools/magpie/: Cargo.toml
tools/magpie-derive/: Cargo.toml
tools/magpie-derive/src/: lib.rs
tools/magpie-rewrite/: Cargo.toml
tools/magpie/lib/src/: magpie.rv
tools/magpie/magpie-lib/: Cargo.toml
tools/magpie/magpie-lib/src/: lib.rs  project.rs  runner.rs
tools/magpie/magpie-wrapper/: Cargo.toml
tools/magpie/magpie-wrapper/src/: main.rs
tools/magpie/src/: arguments.rs  main.rs  project.rs  test.rs
(+70 files in other folders)
