[workspace]
members = [
    "language/checker",
    "language/cli",
    "language/parser",
    "language/runner",
    "language/syntax",

    "language/compilers/llvm",

    "tools/magpie",
    "tools/ide-plugins/raven-intellij-natives",
    "tools/ide-plugins/raven-language-server"
]

exclude = [
    "crates/chalk"
]