[package]
name = "checker"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../syntax" }
data = { path = "../data" }

indexmap = "2.2.5"

# CPU-bound async tasks
tokio = { version = "1.36.0", features = ["rt", "sync", "time"] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }

# Utility / Code Cleanliness
anyhow = "1.0.80"
async-trait = { path = "../../crates/async-trait" }
async-recursion = { path = "../../crates/async-recursion" }
