[package]
name = "checker"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../syntax" }
data = { path = "../data" }

indexmap = "2.4.0"

# CPU-bound async tasks
tokio = { version = "1.39.3", features = ["rt", "sync", "time"] }
parking_lot = "0.12.3"

# Utility / Code Cleanliness
anyhow = "1.0.86"
async-trait = "0.1.81"
async-recursion = "1.1.1"
