[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../syntax" }

async-recursion = { version = "1.0.5", path = "../../crates/async-recursion" }
anyhow = "1.0.70"
indexmap = "1.9.3"

tokio = { version = "1.27.0", features = ["rt"] }

# Debugging
no_deadlocks = "1.3.1"