[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../syntax" }
data = { path = "../data" }

async-recursion = { version = "1.0.5", path = "../../crates/async-recursion" }
anyhow = "1.0.80"
indexmap = "2.2.5"

tokio = { version = "1.36.0", features = ["rt", "sync", "time"] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
