[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../syntax" }
parser = { path = "../parser" }
checker = { path = "../checker" }
data = { path = "../data" }

# Compilers
compiler-llvm = { path = "../compilers/llvm" }

# Tokio is used for scheduling I/O and CPU operations
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync", "time"] }
parking_lot = "0.12.1"

dashmap = "6.0.1"

# Utility / Code Cleanliness
anyhow = "1.0.80"
