[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../syntax" }
parser = { path = "../parser" }
checker = { path = "../checker" }
data = { path = "../data" }

compiler-llvm = { path = "../compilers/llvm" }

tokio = { version = "1.39.3", features = ["rt-multi-thread", "sync", "time"] }
parking_lot = "0.12.3"
dashmap = "6.0.1"

anyhow = "1.0.86"
