[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { version = "0.1.0", path = "../data" }
anyhow = "1.0.80"
async-trait = { version = "0.1.69", path = "../../crates/async-trait" }
lazy_static = "1.4.0"
indexmap = "2.2.5"
colored = "2.1.0"

chalk-solve = "0.96.0"
chalk-ir = "0.96.0"
chalk-recursive = "0.96.0"

dashmap = "5.5.3"

tokio = { version = "1.36.0", features = ["rt", "sync", "time"] }
async-recursion = { version = "1.0.5", path = "../../crates/async-recursion" }
parking_lot = "0.12.1"