[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
data = { version = "0.1.0", path = "../data" }
anyhow = "1.0.86"
async-trait = "0.1.81"
lazy_static = "1.5.0"
indexmap = "2.4.0"
colored = "2.1.0"

chalk-solve = "0.98.0"
chalk-ir = "0.98.0"
chalk-recursive = "0.98.0"

dashmap = "6.0.1"

tokio = { version = "1.39.3", features = ["rt", "sync", "time"] }
async-recursion = "1.1.1"
parking_lot = "0.12.3"