[package]
name = "magpie"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[dependencies]
data = { path = "../../language/data" }
parser = { path = "../../language/parser" }
magpie-lib = { path = "magpie-lib" }

include_dir = "0.7.3"

tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "time", "sync"] }