[package]
name = "magpie"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[dependencies]
data = { path = "../../language/data" }
parser = { path = "../../language/parser" }
magpie-lib = { path = "magpie-lib" }

include_dir = "0.7.4"

tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros", "time", "sync"] }