[package]
name = "compiler-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../../syntax" }
data = { path = "../../data" }

async-trait = "0.1.78"

tokio = { version = "1.36.0", features = ["rt", "sync", "time"] }
parking_lot = "0.12.1"

llvm-sys = "130.1.2"
inkwell = { version = "0.4.0", features = ["llvm13-0"] }

dashmap = "5.5.3"