[package]
name = "compiler-llvm"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
syntax = { path = "../../syntax" }
data = { path = "../../data" }

async-trait = "0.1.78"

tokio = { version = "1.36.0", features = ["rt", "sync", "time"] }
parking_lot = "0.12.1"

llvm-sys = { version = "180.0.0", features = ["no-llvm-linking"] }
inkwell = { git = "https://github.com/BigBadE/inkwell", features = ["llvm18-0-no-llvm-linking"] }

dashmap = "6.0.1"

[build-dependencies]
anyhow = "1.0.83"
cc = "1.0.97"
lazy_static = "1.4.0"
regex-lite = "0.1.5"
semver = "1.0.23"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }