[package]
name = "compiler-llvm"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
syntax = { path = "../../syntax" }
data = { path = "../../data" }

async-trait = "0.1.81"

tokio = { version = "1.39.3", features = ["rt", "sync", "time"] }
parking_lot = "0.12.3"

llvm-sys = { version = "181.1.1", features = ["no-llvm-linking"] }
inkwell = { git = "https://github.com/BigBadE/inkwell", features = ["llvm18-0-no-llvm-linking"] }

dashmap = "6.0.1"

[build-dependencies]
anyhow = "1.0.86"
cc = "1.1.13"
lazy_static = "1.5.0"
regex-lite = "0.1.6"
semver = "1.0.23"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }