[package]
name = "raven-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../../../language/syntax" }
parser = { path = "../../../language/parser" }

lsp-server = "0.7.4"
lsp-types = {  version = "0.94.1", features = ["proposed"] }

tokio = { version = "1.33.0", features = ["rt-multi-thread", "sync", "time"] }

crossbeam-channel = "0.5.8"

serde_json = "1.0.108"
serde = "1.0.192"