[package]
name = "raven-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../../../language/syntax" }
data = { path = "../../../language/data" }
parser = { path = "../../../language/parser" }
magpie-lib = { path = "../../magpie/magpie-lib" }

lsp-server = "0.7.6"
lsp-types = { version = "0.95.0", features = ["proposed"] }

tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync", "time"] }
parking_lot = "0.12.1"

crossbeam-channel = "0.5.9"

serde_json = "1.0.114"
serde = "1.0.197"