[package]
name = "raven-language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../../../language/syntax" }
data = { path = "../../../language/data" }
parser = { path = "../../../language/parser" }
magpie-lib = { path = "../../magpie/magpie-lib" }

lsp-server = "0.7.6"
lsp-types = { version = "0.97.0", features = ["proposed"] }

tokio = { version = "1.39.3", features = ["rt-multi-thread", "sync", "time"] }
parking_lot = "0.12.3"

crossbeam-channel = "0.5.13"

serde_json = "1.0.125"
serde = "1.0.208"