[package]
name = "magpie-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../../../language/syntax" }
runner = { path = "../../../language/runner" }
data = { path = "../../../language/data" }
parser = { path = "../../../language/parser" }

magpie-derive = { path = "../../magpie-derive" }

async-recursion = "1.1.0"

include_dir = "0.7.3"

tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
parking_lot = "0.12.1"