[package]
name = "magpie-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { path = "../../../language/syntax" }
runner = { path = "../../../language/runner" }
data = { path = "../../../language/data" }
parser = { path = "../../../language/parser" }

magpie-derive = { path = "../../magpie-derive" }

async-recursion = "1.1.1"

anyhow = "1.0.86"
include_dir = "0.7.4"

tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
parking_lot = "0.12.3"